--- a/platform.parent/pom.xml
+++ b/platform.parent/pom.xml
@@ -10,12 +10,9 @@
 	<artifactId>com.anthem.oss.nimbus.core.parent</artifactId>
 	<packaging>pom</packaging>
 	<name>nimbus-core-parent</name>
-<!-- 	<modules>
-		<module>../platform.spec.model</module>
-		<module>../platform.spec.model.test</module>
-		<module>../platform.utils</module>
-		<module>../platform.core.process</module>
-	</modules> -->
+	<!-- <modules> <module>../platform.spec.model</module> <module>../platform.spec.model.test</module> 
+		<module>../platform.utils</module> <module>../platform.core.process</module> 
+		</modules> -->
 	<url></url>
 	<organization>
 		<name>Anthem Inc.</name>
@@ -178,12 +175,22 @@
 							</configuration>
 						</execution>
 						<execution>
-							<id>npm config</id>
+							<id>npm config set registry</id>
 							<goals>
 								<goal>npm</goal>
 							</goals>
 							<configuration>
 								<arguments>config set registry https://registry.npmjs.org/</arguments>
+							</configuration>
+							<phase>generate-resources</phase>
+						</execution>
+						<execution>
+							<id>npm config turn off ssl</id>
+							<goals>
+								<goal>npm</goal>
+							</goals>
+							<configuration>
+								<arguments>config set strict-ssl false</arguments>
 							</configuration>
 							<phase>generate-resources</phase>
 						</execution>
