--- a/platform.core.process/pom.xml
+++ b/platform.core.process/pom.xml
@@ -172,6 +172,10 @@
 		    <groupId>com.querydsl</groupId>
 		    <artifactId>querydsl-apt</artifactId>
 		</dependency>
+		<dependency>
+    		<groupId>org.springframework.security</groupId>
+   			 <artifactId>spring-security-messaging</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
