--- a/platform.core.process/src/test/resources/application-test.yml
+++ b/platform.core.process/src/test/resources/application-test.yml
@@ -26,10 +26,14 @@ domain:
   model:
     basePackages:
       - com.anthem.oss.nimbus.core.entity
+      - com.anthem.nimbus.platform.web.flow.login
+      - com.anthem.platform.extension.clientadmin.model
+      - com.anthem.platform.extension.clientadmin.view
       - com.anthem.platform.client.extension.cm.model
       - com.anthem.platform.client.extension.cm.flow
-      - com.anthem.oss.nimbus.test.sample.um.model
-      - com.anthem.oss.nimbus.core.expressions
+      - com.anthem.platform.scheduler.extension.flow
+      - com.anthem.platform.scheduler.test
+      - com.anthem.platform.extension.clientadmin
     typeClassMappings:
       java.time.LocalDate : 
         date
