--- a/platform.spec.model.test/pom.xml
+++ b/platform.spec.model.test/pom.xml
@@ -62,6 +62,11 @@
 			<groupId>com.anthem.oss.nimbus.core</groupId>
 			<artifactId>com.anthem.oss.nimbus.core.spec</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-tomcat</artifactId>
+		</dependency> 
+
 	</dependencies>
 
 </project>
