--- a/platform.core.process/pom.xml
+++ b/platform.core.process/pom.xml
@@ -47,8 +47,8 @@
 			<artifactId>spring-boot-starter-websocket</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-security</artifactId>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-oauth2</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.codehaus.groovy</groupId>
@@ -175,6 +175,10 @@
 		<dependency>
     		<groupId>org.springframework.security</groupId>
    			 <artifactId>spring-security-messaging</artifactId>
+		</dependency>
+		<dependency>
+    		<groupId>org.springframework.security</groupId>
+    		<artifactId>spring-security-jwt</artifactId>
 		</dependency>
 	</dependencies>
 
