--- a/platform.dependencies/pom.xml
+++ b/platform.dependencies/pom.xml
@@ -58,6 +58,7 @@
 		<nimbus.core.spec.version>1.0.0.M3-SNAPSHOT</nimbus.core.spec.version>
 		<nimbus.core.test.version>1.0.0.M3-SNAPSHOT</nimbus.core.test.version>
 		<nimbus.core.api.version>1.0.0.M3-SNAPSHOT</nimbus.core.api.version>
+		<nimbus.core.processor.version>1.0.0.M3-SNAPSHOT</nimbus.core.processor.version>
 	</properties>
 
 	<developers>
@@ -221,6 +222,11 @@
 				<groupId>com.anthem.oss.nimbus.core</groupId>
 				<artifactId>com.anthem.oss.nimbus.core.api</artifactId>
 				<version>${nimbus.core.api.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>com.anthem.oss.nimbus.core</groupId>
+				<artifactId>com.anthem.oss.nimbus.core.processor</artifactId>
+				<version>${nimbus.core.processor.version}</version>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
