--- a/platform.spec.model/pom.xml
+++ b/platform.spec.model/pom.xml
@@ -85,6 +85,10 @@
 		    <groupId>com.querydsl</groupId>
 		    <artifactId>querydsl-apt</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>com.anthem.oss.nimbus.core</groupId>
+			<artifactId>com.anthem.oss.nimbus.core.processor</artifactId>	
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
@@ -99,14 +103,33 @@
 			                <goal>process</goal>
 			            </goals>
 			            <configuration>
-			                <outputDirectory>${basedir}/target/generated-sources/java</outputDirectory>
+			                <!-- outputDirectory>${basedir}/target/generated-sources/java</outputDirectory> -->
 			                <processor>
-			                  com.anthem.oss.nimbus.core.DomainAnnotationProcessor
+			                  com.anthem.oss.nimbus.core.processor.DomainAnnotationProcessor
 			                </processor>
 			            </configuration>
 			        </execution>
 			     </executions>
 			</plugin>
+			 <!-- Generated source code to be compiled to .class files -->
+				<plugin>
+					<groupId>org.codehaus.mojo</groupId>
+					<artifactId>build-helper-maven-plugin</artifactId>
+					<executions>
+					  <execution>
+							<id>add-extra-source</id>
+							<phase>generate-sources</phase>
+							<goals>
+								<goal>add-source</goal>
+							</goals>
+							<configuration>
+								<sources>
+									<source>${basedir}/target/generated-sources/annotations</source>
+								</sources>
+							</configuration>
+						</execution>
+					</executions>
+				</plugin>
 		</plugins>
 	</build>
 </project>
