--- a/platform.dependencies/pom.xml
+++ b/platform.dependencies/pom.xml
@@ -4,7 +4,7 @@
 
 	<groupId>com.anthem.oss.nimbus.core</groupId>
 	<artifactId>com.anthem.oss.nimbus.core.dependencies</artifactId>
-	<version>1.0.0.M10-SNAPSHOT</version>
+	<version>1.0.0.M9-SNAPSHOT</version>
 	<packaging>pom</packaging>
 	<name>nimbus-core-dependencies</name>
 	<description>Nimbus Core Bill of materials</description>
@@ -23,7 +23,7 @@
 		<maven.compiler.source>${java.version}</maven.compiler.source>
 		<maven.compiler.target>${java.version}</maven.compiler.target>
 		<spring.boot.version>1.5.2.RELEASE</spring.boot.version>
-		<spring.cloud.version>Dalston.RC1</spring.cloud.version>
+		<spring.cloud.version>Dalston.RELEASE</spring.cloud.version>
 		<swagger.version>2.4.0</swagger.version>
 		<mongo>3.4</mongo>
 		<commons-io.version>2.4</commons-io.version>
