--- a/nimbus-test/pom.xml
+++ b/nimbus-test/pom.xml
@@ -14,20 +14,42 @@
 		<!-- <sonar.jacoco.reportPath>${project.basedir}/../platform.parent/target/jacoco.exec</sonar.jacoco.reportPath> -->
 	</properties>
 	<dependencies>
-    	<dependency>
-			<groupId>org.projectlombok</groupId>
-			<artifactId>lombok</artifactId>
-		</dependency>
-	
 		<dependency>
 			<groupId>com.antheminc.oss</groupId>
 			<artifactId>nimbus-core</artifactId>
 		</dependency>
-		
-        <dependency>
+    	<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+		</dependency>
+		<!-- <dependency>
+			<groupId>org.springframework.data</groupId>
+			<artifactId>spring-data-commons</artifactId>
+		</dependency> -->
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>de.flapdoodle.embed</groupId>
 			<artifactId>de.flapdoodle.embed.mongo</artifactId>
 			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.assertj</groupId>
+			<artifactId>assertj-core</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-core</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-test</artifactId>
 		</dependency>		
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -48,7 +70,7 @@
 						<goal>process</goal>
 					</goals>
 					<configuration>
-						<outputDirectory>${basedir}/target/generated-sources/java</outputDirectory> 
+						<!-- <outputDirectory>${basedir}/target/generated-sources/java</outputDirectory> --> 
 						<processor>
 							com.antheminc.oss.nimbus.domain.support.DomainQuerydslProcessor
 						</processor>
