--- a/nimbus-core/pom.xml
+++ b/nimbus-core/pom.xml
@@ -139,7 +139,7 @@
                 <artifactId>maven-jar-plugin</artifactId>
                 <executions>
                     <execution>
-                        <goals>
+                    	<goals>
                             <goal>test-jar</goal>
                         </goals>
                     </execution>
@@ -152,12 +152,13 @@
                     <includeEmptyDirs>true</includeEmptyDirs>
                 </configuration>
             </plugin>
-			<!-- <plugin>
+			<plugin>
 				<groupId>com.mysema.maven</groupId>
 				<artifactId>apt-maven-plugin</artifactId>
 				<version>1.1.3</version>
 				<executions>
 					<execution>
+						<phase>process-classes</phase>
 						<goals>
 							<goal>process</goal>
 						</goals>
@@ -169,7 +170,7 @@
 						</configuration>
 					</execution>
 				</executions>
-			</plugin> -->
+			</plugin> 
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
