--- a/nimbus-test/src/test/resources/application-test.yml
+++ b/nimbus-test/src/test/resources/application-test.yml
@@ -46,8 +46,10 @@ domain:
       - com.antheminc.oss.nimbus.entity
       - com.antheminc.oss.nimbus.test.entity.simplecase.core
       - com.antheminc.oss.nimbus.test.entity.simplecase.view
-      - com.antheminc.oss.nimbus.test.entity.sample.core
-      - com.antheminc.oss.nimbus.test.entity.sample.view
+      - com.antheminc.oss.nimbus.test.entity.sample.s0.core
+      - com.antheminc.oss.nimbus.test.entity.sample.s0.view
+      - com.antheminc.oss.nimbus.test.entity.sample.s1.core
+      - com.antheminc.oss.nimbus.test.entity.sample.s1.view      
       - com.antheminc.oss.nimbus.domain.bpm
       - com.antheminc.oss.nimbus.domain.rules
     typeClassMappings:
