--- a/nimbus-core/pom.xml
+++ b/nimbus-core/pom.xml
@@ -134,6 +134,39 @@
     </dependencies>
     <build>
         <plugins>
+ <plugin>
+    <groupId>org.codehaus.mojo</groupId>
+    <artifactId>build-helper-maven-plugin</artifactId>
+    <executions>
+        <execution>
+            <id>add-source</id>
+            <phase>generate-sources</phase>
+            <goals>
+                <goal>add-source</goal>
+            </goals>
+            <configuration>
+                <sources>
+                    <source>${project.build.directory}/generated-sources/annotations</source>
+                    
+                </sources>
+                
+            </configuration>
+        </execution>
+    </executions>
+ </plugin>         
+ 
+         <!-- <plugin>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <executions>
+        	<execution>
+        		<phase>compile</phase>
+        		<configuration>
+        			<includes><include>**/java/**</include></includes>
+        			<generatedSourcesDirectory>${basedir}/target/generated-sources/java</generatedSourcesDirectory>
+        		</configuration>
+        	</execution>
+        </executions>
+      </plugin> -->  
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
@@ -145,25 +178,25 @@
                     </execution>
                 </executions>
             </plugin>
-            <plugin>
+            <!-- <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-resources-plugin</artifactId>
                 <configuration>
                     <includeEmptyDirs>true</includeEmptyDirs>
                 </configuration>
-            </plugin>
+            </plugin> -->
 			<plugin>
 				<groupId>com.mysema.maven</groupId>
 				<artifactId>apt-maven-plugin</artifactId>
 				<version>1.1.3</version>
 				<executions>
 					<execution>
-						<phase>process-classes</phase>
+						<phase>compile</phase>
 						<goals>
 							<goal>process</goal>
 						</goals>
 						<configuration>
-							<outputDirectory>${basedir}/target/generated-sources/java</outputDirectory> 
+							<outputDirectory>${project.build.directory}/generated-sources/annotations</outputDirectory> 
 							<processor>
 								com.antheminc.oss.nimbus.domain.support.DomainQuerydslProcessor
 							</processor>
@@ -171,6 +204,27 @@
 					</execution>
 				</executions>
 			</plugin> 
+   <plugin>
+      <artifactId>maven-resources-plugin</artifactId>
+      <executions>
+        <execution>
+          <id>copy-annotations</id>
+          <phase>prepare-package</phase>
+          
+          <goals>
+            <goal>copy-resources</goal>
+          </goals>
+          <configuration>
+          	<outputDirectory>${project.build.directory}/classes</outputDirectory>
+            <resources>
+              <resource>
+                <directory>${project.build.directory}/generated-sources/annotations</directory>
+              </resource>
+            </resources>
+          </configuration>
+        </execution>
+      </executions>
+    </plugin>			
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
