--- a/nimbus-core/pom.xml
+++ b/nimbus-core/pom.xml
@@ -8,14 +8,24 @@
 		<relativePath>../nimbus-parent</relativePath>
 	</parent>
 
-	<artifactId>nimbus-core</artifactId> 
-	<packaging>jar</packaging>
-	<name>nimbus-core</name>
+	<artifactId>nimbus-core-parent</artifactId> 
+	<packaging>pom</packaging>
+
+	<modules>
+		<module>core</module>
+		<module>post</module>
+	</modules>
+
+	<dependencyManagement>
+		<dependencies>
+			<dependency>
+				<groupId>com.antheminc.oss</groupId>
+				<artifactId>nimbus-dsl</artifactId>
+				<version>${nimbus.core.version}</version>
+			</dependency>
+		</dependencies>
+	</dependencyManagement>
 	
-    <properties>
-        <sonar.projectName>nimbus-core</sonar.projectName>
-        <!-- <sonar.jacoco.reportPath>${project.basedir}/../platform.parent/target/jacoco.exec</sonar.jacoco.reportPath> -->
-    </properties>
     <dependencies>
     	<dependency>
 			<groupId>org.projectlombok</groupId>
@@ -103,12 +113,33 @@
             <artifactId>netty-all</artifactId>
             <!-- <scope>test</scope> -->
         </dependency>
-        <dependency>
+		<dependency>
 			<groupId>de.flapdoodle.embed</groupId>
 			<artifactId>de.flapdoodle.embed.mongo</artifactId>
 			<scope>test</scope>
 		</dependency>
-        
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.assertj</groupId>
+			<artifactId>assertj-core</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-core</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-test</artifactId>
+		</dependency>		
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-test</artifactId>
+			<scope>test</scope>
+		</dependency>	
+		        
         <!-- Querydsl -->
         <dependency>
             <groupId>com.querydsl</groupId>
@@ -131,111 +162,5 @@
 			<groupId>org.owasp.esapi</groupId>
     		<artifactId>esapi</artifactId>
 		</dependency>
-    </dependencies>
-    <build>
-        <plugins>
- <plugin>
-    <groupId>org.codehaus.mojo</groupId>
-    <artifactId>build-helper-maven-plugin</artifactId>
-    <executions>
-        <execution>
-            <id>add-source</id>
-            <phase>generate-sources</phase>
-            <goals>
-                <goal>add-source</goal>
-            </goals>
-            <configuration>
-                <sources>
-                    <source>${project.build.directory}/generated-sources/annotations</source>
-                    
-                </sources>
-                
-            </configuration>
-        </execution>
-    </executions>
- </plugin>         
- 
-         <!-- <plugin>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <executions>
-        	<execution>
-        		<phase>compile</phase>
-        		<configuration>
-        			<includes><include>**/java/**</include></includes>
-        			<generatedSourcesDirectory>${basedir}/target/generated-sources/java</generatedSourcesDirectory>
-        		</configuration>
-        	</execution>
-        </executions>
-      </plugin> -->  
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-jar-plugin</artifactId>
-                <executions>
-                    <execution>
-                    	<goals>
-                            <goal>test-jar</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-            <!-- <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-resources-plugin</artifactId>
-                <configuration>
-                    <includeEmptyDirs>true</includeEmptyDirs>
-                </configuration>
-            </plugin> -->
-			<plugin>
-				<groupId>com.mysema.maven</groupId>
-				<artifactId>apt-maven-plugin</artifactId>
-				<version>1.1.3</version>
-				<executions>
-					<execution>
-						<phase>compile</phase>
-						<goals>
-							<goal>process</goal>
-						</goals>
-						<configuration>
-							<outputDirectory>${project.build.directory}/generated-sources/annotations</outputDirectory> 
-							<processor>
-								com.antheminc.oss.nimbus.domain.support.DomainQuerydslProcessor
-							</processor>
-						</configuration>
-					</execution>
-				</executions>
-			</plugin> 
-   <plugin>
-      <artifactId>maven-resources-plugin</artifactId>
-      <executions>
-        <execution>
-          <id>copy-annotations</id>
-          <phase>prepare-package</phase>
-          
-          <goals>
-            <goal>copy-resources</goal>
-          </goals>
-          <configuration>
-          	<outputDirectory>${project.build.directory}/classes</outputDirectory>
-            <resources>
-              <resource>
-                <directory>${project.build.directory}/generated-sources/annotations</directory>
-              </resource>
-            </resources>
-          </configuration>
-        </execution>
-      </executions>
-    </plugin>			
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <configuration>
-                    <includes>
-                        <include>**/Test*.java</include>
-                        <include>**/*Tests.java</include>
-                        <include>**/*Test.java</include>
-                    </includes>
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>
+    </dependencies>	
 </project>
