--- a/nimbus-parent/pom.xml
+++ b/nimbus-parent/pom.xml
@@ -70,6 +70,7 @@
         <!-- nimbus-core -->
         <nimbus.version>1.0.0.M1-SNAPSHOT</nimbus.version>
         <nimbus.core.version>${nimbus.version}</nimbus.core.version>
+        <nimbus.dsl.version>${nimbus.core.version}</nimbus.dsl.version> <!-- DSL matches core's version -->
         <nimbus.test.version>${nimbus.version}</nimbus.test.version>
     </properties>
 
@@ -291,6 +292,11 @@
                 <artifactId>nimbus-core</artifactId>
                 <version>${nimbus.core.version}</version>
             </dependency>
+            <dependency>
+                <groupId>com.antheminc.oss</groupId>
+                <artifactId>nimbus-dsl</artifactId>
+                <version>${nimbus.dsl.version}</version>
+            </dependency>            
             <dependency>
                 <groupId>com.antheminc.oss</groupId>
                 <artifactId>nimbus-test</artifactId>
