--- a/nimbus-test/pom.xml
+++ b/nimbus-test/pom.xml
@@ -18,6 +18,10 @@
 			<groupId>com.antheminc.oss</groupId>
 			<artifactId>nimbus-core</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>com.antheminc.oss</groupId>
+			<artifactId>nimbus-dsl</artifactId>
+		</dependency>		
     	<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
@@ -70,7 +74,7 @@
 						<goal>process</goal>
 					</goals>
 					<configuration>
-						<outputDirectory>${basedir}/target/generated-sources/java</outputDirectory> 
+						<outputDirectory>${basedir}/target/generated-sources/annotation</outputDirectory> 
 						<processor>
 							com.antheminc.oss.nimbus.domain.support.DomainQuerydslProcessor
 						</processor>
