--- a/platform.web/pom.xml
+++ b/platform.web/pom.xml
@@ -9,9 +9,9 @@
 	<packaging>jar</packaging>
 
 	<parent>
-		<groupId>com.anthem.oss.nimbus.core</groupId>
-		<artifactId>com.anthem.oss.nimbus.core.parent</artifactId>
-		<version>1.0.0.M11-SNAPSHOT</version>
+		<groupId>com.antheminc.oss</groupId>
+		<artifactId>nimbus-parent</artifactId>
+		<version>1.0.0.M1-SNAPSHOT</version>
 	</parent>
 
 	<properties>
@@ -63,8 +63,8 @@
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>com.anthem.oss.nimbus.core</groupId>
-			<artifactId>com.anthem.oss.nimbus.core.api</artifactId>
+			<groupId>com.antheminc.oss</groupId>
+			<artifactId>nimbus-core</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.quartz-scheduler</groupId>
