--- a/platform.web/pom.xml
+++ b/platform.web/pom.xml
@@ -3,16 +3,17 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>	
 
+	<parent>
+		<groupId>com.antheminc.oss</groupId>
+		<artifactId>nimbus-parent</artifactId>
+		<version>1.0.0.M1-SNAPSHOT</version>
+		<relativePath>../nimbus-parent</relativePath>
+	</parent>
+	
 	<name>nimbus-core-web</name>
 	<artifactId>com.anthem.oss.nimbus.core.web</artifactId>
 	<description>oss web project</description>
 	<packaging>jar</packaging>
-
-	<parent>
-		<groupId>com.anthem.oss.nimbus.core</groupId>
-		<artifactId>com.anthem.oss.nimbus.core.parent</artifactId>
-		<version>1.0.0.M11-SNAPSHOT</version>
-	</parent>
 
 	<properties>
 		<sonar.projectName>NIM-Platform Web</sonar.projectName>
@@ -20,6 +21,10 @@
 	</properties>
 
 	<dependencies>
+		<dependency>
+			<groupId>com.antheminc.oss</groupId>
+			<artifactId>nimbus-core</artifactId>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-configuration-processor</artifactId>
@@ -61,10 +66,6 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>com.anthem.oss.nimbus.core</groupId>
-			<artifactId>com.anthem.oss.nimbus.core.api</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.quartz-scheduler</groupId>
